[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path = "../net" }
game = { path = "../game" }
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7.8" }
